# sparkler

./: .gitignore  Cargo.toml  README.md
sparkler/: Cargo.toml
sparkler/src/: error.rs  firecracker.rs  main.rs  network.rs  util.rs
sparkler/src/firecracker/: api.rs  jailer.rs
sparkler/src/network/: namespace.rs
sparkler/src/network/cni/: schema.rs
